re-implemented frontend, changed README.md

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,2 @@
-<h1>{{title}}</h1>
-<nav>
-<!--  <a routerLink="/dashboard">Dashboard</a>-->
-  <a routerLink="/todo">Liste</a>
-</nav>
-<router-outlet></router-outlet>
+<h1>ToDo-List</h1>
+<app-list></app-list>
