--- a/frontend/src/app/list/list.component.css
+++ b/frontend/src/app/list/list.component.css
@@ -1,56 +1,12 @@
-.list {
-  margin: 0 0 2em 0;
-  list-style-type: none;
-  padding: 0;
-  width: 15em;
+li>div>*{
+  margin-right: 10px;
+}li>*{
+  margin-right: 10px;
 }
-.list li {
-  position: relative;
-  cursor: pointer;
+ul{
+  list-style: none;
 }
-
-.heroes li:hover {
-  left: .1em;
-}
-
-.list a {
-  color: #333;
-  text-decoration: none;
-  background-color: #EEE;
-  margin: .5em;
-  padding: .3em 0;
-  height: 1.6em;
-  border-radius: 4px;
-  display: block;
-  width: 100%;
-}
-
-.list a:hover {
-  color: #2c3a41;
-  background-color: #e6e6e6;
-}
-.list checkbox {
-  background-color: dimgrey;
-}
-
-.list a:active {
-  background-color: #525252;
-  color: #fafafa;
-}
-
-.list .id {
-  display: inline-block;
-  font-size: small;
-  color: white;
-  padding: 0.8em 0.7em 0 0.7em;
-  background-color: #405061;
-  line-height: 1em;
-  position: relative;
-  left: -1px;
-  top: -4px;
-  height: 1.8em;
-  min-width: 16px;
-  text-align: right;
-  margin-right: .8em;
-  border-radius: 4px 0 0 4px;
+h2{
+  flex-basis: 100%;
+  text-align: center;
 }
